--- a/ecomm_cart/src/css/custom.css
+++ b/ecomm_cart/src/css/custom.css
@@ -1,3 +1,8 @@
+body {
+  background-image: url("../books.jpeg");
+  background-color: #cccccc;
+}
+
 header {
   display: none;
 }
@@ -13,20 +18,26 @@ header {
 }
 
 .signuplogingrp {
-  display: block !important;
+  /* display: block !important; */
   margin-left: 15px;
   width: auto;
   margin: auto;
+  border-radius: 4px;
 }
 .logoutgrp {
-  padding: 20px;
+  /* padding: 20px; */
   vertical-align: middle;
 }
 .signuplogingrp > button,
 .logoutgrpbutton {
-  margin-right: 15px;
+  margin-right: 5px;
+  margin-left: 5px;
   background-color: #0067a5;
-  color: #fada5e;
+  color: white;
+  border-radius: 4px;
+}
+.signuplogingrp > input {
+  margin-right: 5px;
 }
 
 form {
@@ -51,13 +62,18 @@ form {
 }
 .bkcoral {
   background-color: #ff4040;
+  color: white;
+  border: none;
+}
+.bkgreen {
+  background-color: #50c878;
   border: none;
 }
 
 .textcenter {
   text-align: center;
   /* padding: 50px; */
-  background-color: #eae0c8;
+  /* background-color: #eae0c8; */
   width: auto;
   margin: auto;
   height: auto;
@@ -95,8 +111,187 @@ h1,
 
 .SignupForm {
   width: 100%;
+  font-size: 15px;
+}
+.SignupForm,
+.logoutgrp,
+.cartsummary,
+.SignupForm > form {
+  font-size: 15px;
+  margin-top: 10px;
+}
+.SignupForm > form,
+.cartsummary {
+  margin-bottom: 10px;
+}
+button {
+  border-radius: 4px;
+}
+body,
+h1 {
+  color: #282c34;
 }
 
+.flexparent_row_leftalign {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.flexparent_column_leftalign {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.displayflex {
+  display: flex;
+}
+
+.cartsummary > button {
+  display: inline;
+}
+.singleproductcard {
+  width: 30%;
+  min-height: 250px;
+}
+
+.singlecartitem {
+  width: 100%;
+  line-height: 1em;
+}
+
+.singleproductcard,
+.singlecartitem {
+  background-color: white;
+  display: inline-flex;
+  margin: 7px;
+  padding: 3px;
+
+  -webkit-box-shadow: -5px 5px 12px 0px rgba(119, 119, 119, 0.5);
+  -moz-box-shadow: -5px 5px 12px 0px rgba(119, 119, 119, 0.5);
+  box-shadow: -5px 5px 12px 0px rgba(119, 119, 119, 0.5);
+}
+
+/* 
+img {
+  height: 100px;
+} */
+.booklogo {
+  height: 25px;
+  width: 25px;
+}
+.booktitle {
+  display: block;
+  color: #666;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  text-transform: capitalize;
+  font-size: 18px;
+  font-weight: 500;
+  padding: 10px;
+  line-height: 1em;
+  min-height: 60px;
+}
+
+.bookstock {
+  color: #666;
+  font-size: 13px;
+  font-weight: 300;
+}
+.bookprice {
+  display: block;
+}
+
+.bookprice,
+.singleproductcard_innerdiv > .form-input,
+.buybutton,
+.updatebutton {
+  color: #0067a5;
+  font-size: 18px;
+  font-weight: 400;
+}
+
+.removebutton {
+  color: #ff4040;
+  font-size: 18px;
+  font-weight: 400;
+  margin-left: 25px;
+  /* margin-left: 1px; */
+}
+.removebutton,
+.updatebutton {
+  height: 2em;
+  padding: 2px;
+  margin-right: 7px;
+}
+
+.singleproductcard_innerdiv > .form-input,
+.form-input-incart {
+  width: 4em;
+  text-align: right;
+  padding: 2px;
+  margin-right: 7px;
+  height: 2em;
+  font-size: 18px;
+}
+
+.buybutton,
+.updatebutton {
+  width: 4em;
+  text-align: center;
+  padding: 2px;
+  height: 2em;
+  /* background-color: #0067a5; */
+  background-color: #5cd8be;
+  /* border: 1px solid #0067a5; */
+  color: white;
+  /* border-radius: 4px; */
+}
+.booksheader {
+  display: inline;
+  position: sticky;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+  background-color: rgba(119, 119, 119, 0.6);
+
+  /* opacity: 0.2; */
+}
+
+.cartdetailmain {
+  /* background-color: white; */
+}
+
+.cartdetailmain > button {
+  margin: 15px;
+}
+
+.booktitleincart {
+  display: block;
+  text-align: right;
+  min-width: 30%;
+  /*  */
+  color: #666;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  text-transform: capitalize;
+  font-size: 18px;
+  font-weight: 500;
+  padding: 10px;
+  line-height: 1em;
+}
+
+.form-input-incart {
+}
+.cartitemslist {
+  background-color: rgb(90, 216, 191, 0.5);
+  width: auto;
+  padding: 15px;
+  justify-content: center;
+}
 /* .search_main {
   height: 200px;
 } */
