--- a/ecomm_cart/src/css/skeleton.css
+++ b/ecomm_cart/src/css/skeleton.css
@@ -29,7 +29,7 @@
 .container {
   position: relative;
   width: 100%;
-  max-width: 960px;
+  /* max-width: 960px; */
   margin: 0 auto;
   padding: 0 20px;
   box-sizing: border-box;
@@ -193,7 +193,7 @@ body {
 }
 
 div {
-  border: 1px solid red;
+  /* border: 1px solid #ddd; */
 }
 /* Typography
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
