--- a/ecomm_cart/src/custom.scss
+++ b/ecomm_cart/src/custom.scss
@@ -1,5 +1,5 @@
 // Override default variables before the import
-$body-bg: #eee;
+$body-bg: #fff;
 
 // Import Bootstrap and its default variables
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
